--- a/workspace/include/navigation.html
+++ b/workspace/include/navigation.html
@@ -1,9 +1,10 @@
 <section class="navigation_box">
-	<nav class="navigation">
+	<nav id="gnb_main" class="navigation">
 		<ul class="gnb_box">
 			<li id="introduce" class="gnb">
 				<button type="button"
 				        ref="introduce"
+				        onclick="changeIframeUrl('introduce_eroom')"
 				        alt="버튼 센터소개 메뉴"
 				        tabindex="2"
 				>센터소개</button>
@@ -11,6 +12,7 @@
 			<li class="gnb">
 				<button type="button"
 				        ref="rental"
+				        onclick="changeIframeUrl('rental_information')"
 				        alt="버튼 대관안내 메뉴"
 				        tabindex="3"
 				>대관안내</button>
@@ -18,6 +20,7 @@
 			<li id="floor" class="gnb">
 				<button typee="button"
 				        ref="floor"
+				        onclick="changeIframeUrl('floor_all')"
 				        alt="버튼 층별안내 메뉴"
 				        tabindex="4"
 				>층별안내</button>
@@ -25,6 +28,7 @@
 			<li id="traffic" class="gnb">
 				<button type="button"
 				        ref="traffic"
+				        onclick="changeIframeUrl('traffic_bus')"
 				        alt="버튼 교통안내 메뉴"
 				        tabindex="5"
 				>교통안내</button>
